fix translates
